--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-do list</title>
 
-    <link rel="stylesheet" href="style.css" />
-    <script src="app.js" type="module"></script>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/app.js" type="module"></script>
   </head>
   <body>
     <header>
@@ -38,7 +38,7 @@
 
         <img
           src="./trash-can.png"
-          id="trash"
+          id="trash__icon"
           alt="Remove all tasks"
           class="is-hidden"
         />
