--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,13 @@
     <header>
       <h1>To-do list</h1>
 
+      <img
+        src="./change-theme.png"
+        id="change-theme"
+        class=""
+        alt="change-theme icon"
+      />
+
       <button type="button" id="iconChange">
         <svg height="24" width="24" viewBox="0 0 448 512">
           <path
@@ -21,6 +28,7 @@
           ></path>
         </svg>
       </button>
+
       <form id="new-task-form">
         <input
           type="text"
