--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <h1>To-do list</h1>
 
       <img
-        src="./change-theme.png"
+        src="./change-theme-white.png"
         id="change-theme"
         class=""
         alt="change-theme icon"
