--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,7 @@
     <header>
       <h1>To-do list</h1>
 
-      <img
-        src="./change-theme-white.png"
-        id="change-theme"
-        class=""
-        alt="change-theme icon"
-      />
+      <img id="change-theme" class="" alt="change-theme icon" />
 
       <button type="button" id="iconChange">
         <svg height="24" width="24" viewBox="0 0 448 512">
@@ -45,7 +40,7 @@
         <h2>Tasks:</h2>
 
         <img
-          src="./trash-can.png"
+          src="./img/trash-can.png"
           id="trash__icon"
           alt="Remove all tasks"
           class="is-hidden"
